--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
+@charset "UTF-8";
+*  {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body  {
+  padding: 0;
+  margin: 0;
+}
+
+p  {
+  padding: 0;
+  margin: 0;
+}
+
+.navbar {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
 .small-divider {
   height: 1px;
   width: 20px;
   background-color: rgba(50, 50, 50, 0.2);
   margin: 10px auto 10px;
+}
+
+.greeting {
+  position: absolute;
+  right: 60px;
+  top: 65px;
 }
 /*# sourceMappingURL=style.css.map */
