--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,25 @@ p  {
   margin: 10px auto 10px;
 }
 
+.btn-midradius  {
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
 .greeting {
   position: absolute;
   right: 60px;
   top: 65px;
+}
+
+.card-heading {
+  width: 300px;
+  font-weight: 900;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 /*# sourceMappingURL=style.css.map */
