--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,14 +1,14 @@
 // GENERAL
-* {
+* {
     box-sizing: border-box;
 }
 
-body {
+body {
     padding: 0;
     margin: 0;
 }
 
-p {
+p {
     padding: 0;
     margin: 0;
 }
@@ -17,7 +17,7 @@ p {
     padding: {
         left: 50px;
         right: 50px;
-    };
+    }
 }
 
 .small-divider {
@@ -40,7 +40,7 @@ p {
     top: 65px;
 }
 
-// Back-Office Homepage
+// BO - HOMEPAGE
 .card-heading {
     width: 300px;
     font-weight: 900;
@@ -50,3 +50,6 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+
+// MEDIA QUERIES
