--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,14 @@
+@import 'productCards';
+
 // GENERAL
 * {
-    box-sizing: border-box;
+ box-sizing: border-box;
 }
 
 body {
     padding: 0;
     margin: 0;
+    background-color: #F9F9F9;
 }
 
 p {
