--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -15,9 +14,16 @@ p {
   margin: 0;
 }
 
-.navbar {
-  padding-left: 50px;
-  padding-right: 50px;
+.container-fluid {
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+.divider {
+  height: 2px;
+  width: 50px;
+  background-color: rgba(26, 26, 26, 0.6);
+  margin: 10px auto;
 }
 
 .small-divider {
@@ -27,15 +33,65 @@ p {
   margin: 10px auto 10px;
 }
 
-.btn-midradius  {
+.btn-midradius {
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
+}
+
+.navbar {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.navbar a:hover {
+  color: #4BBF73 !important;
+}
+
+.navbar-brand:hover {
+  border-color: #4BBF73 !important;
+}
+
+.second-nav {
+  padding-top: 15px;
+  padding-left: 55px;
+  margin-top: 80px;
+}
+
+.second-nav a {
+  -webkit-transition: all .1s;
+  transition: all .1s;
+}
+
+.second-nav a:hover {
+  color: #F0AD4E !important;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .greeting {
   position: absolute;
   right: 60px;
   top: 65px;
+}
+
+.greeting-guest {
+  position: absolute;
+  right: 60px;
+  top: 98px;
+}
+
+.back-office-card {
+  -webkit-transition: all .1s;
+  transition: all .1s;
+}
+
+.back-office-card a {
+  text-decoration: none;
+}
+
+.back-office-card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .card-heading {
@@ -47,5 +103,107 @@ p {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.product-card {
+  border-radius: 20px;
+  padding-bottom: 5px !important;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  -webkit-transition: all .1s !important;
+  transition: all .1s !important;
+  -webkit-transition: -webkit-box-shadow .1s;
+  transition: -webkit-box-shadow .1s;
+  transition: box-shadow .1s;
+  transition: box-shadow .1s, -webkit-box-shadow .1s;
+  border: none;
+}
+
+.product-card .btn {
+  font-size: 1.2rem;
+}
+
+.product-card:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px !important;
+          box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px !important;
+}
+
+.stock {
+  position: absolute;
+  top: 32%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -32%);
+          transform: translate(-50%, -32%);
+  color: #F0AD4E;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+
+.card-title {
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.product-price {
+  position: absolute;
+  right: 0;
+  bottom: 180px;
+  padding: .8rem;
+  color: #fff;
+  background-color: rgba(73, 187, 112, 0.7);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+          box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.btn-card {
+  padding: 10px 25px !important;
+  border-radius: 10px !important;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 992px) {
+  .search-bar {
+    position: absolute;
+    left: 230px;
+    top: 17px;
+  }
+  .navbar-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 20px;
+  }
+  .second-nav {
+    display: none !important;
+  }
+  #carouselExampleIndicators {
+    margin-top: 85px;
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .search-input {
+    width: 150px !important;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .search-bar {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
