--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ p {
   height: 2px;
   width: 50px;
   background-color: rgba(26, 26, 26, 0.6);
-  margin: 10px auto;
+  margin: 10px auto 30px;
 }
 
 .small-divider {
@@ -166,6 +166,10 @@ p {
   -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
           box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-cart-delete {
+  padding: 5px 10px !important;
 }
 
 @media screen and (max-width: 992px) {
