--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,12 +23,11 @@ p {
     }
 }
 
-
 .divider {
     height: 2px;
     width: 50px;
     background-color: rgba(26, 26, 26, .6);
-    margin: 10px auto;
+    margin: 10px auto 30px;
 }
 
 .small-divider {
@@ -167,6 +166,13 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 
 }
+
+
+// CART
+.btn-cart-delete {
+    padding: 5px 10px !important;
+}
+
 
 // MEDIA QUERIES ===========
 @media screen and (max-width: 992px) {
