cart layout done

--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,35 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.cart-table {
+  border: 1px solid rgba(26, 26, 26, 0.5) !important;
+}
+
 .btn-cart-delete {
   padding: 5px 10px !important;
+}
+
+.total-group {
+  margin-top: 20px;
+  float: right;
+}
+
+label.form-control {
+  font-size: .8rem;
+}
+
+.total-label {
+  width: 50%;
+  font-size: .8rem;
+}
+
+input.form-control {
+  font-size: .8rem;
+}
+
+.total-input {
+  width: 50%;
+  border: 1px solid rgba(26, 26, 26, 0.5) !important;
 }
 
 @media screen and (max-width: 992px) {
