--- a/scss/style.scss
+++ b/scss/style.scss
@@ -210,6 +210,17 @@ p {
     border: 1px solid rgba(26, 26, 26, .5);
 }
 
+.input-quantity {
+    width: 30px;
+    -webkit-appearance: none;
+    text-align: center;
+    border: 1px solid rgba(26, 26, 26, .5);
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+ 
 .total-group {
     margin-top: 20px;
     float: right;
