--- a/scss/style.scss
+++ b/scss/style.scss
@@ -243,6 +243,24 @@ input.form-control {
     width: 50%;
     border: 1px solid rgba(26, 26, 26, .5) !important;
 }
+.btn-checkout {
+    a {
+        padding-bottom: 35px !important;  
+    }
+} 
+
+
+
+// CONTACT FORM ============
+.form-envelope {
+    font-size: 2rem !important;
+}
+
+.btn-submit-contact {
+    font-size: 1.2rem !important;
+    width: 70px;
+    margin: 0 auto;
+}
 
 
 // MEDIA QUERIES ===========
@@ -267,6 +285,10 @@ input.form-control {
 
     #carouselExampleIndicators {
         margin-top: 85px;
+    }
+
+    .page-container {
+        padding-top: 90px;
     }
 }
 
