--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,3 @@
-// @import 'productCards';
-
 // GENERAL ==========
 * {
     box-sizing: border-box;
@@ -303,6 +301,58 @@ input.form-control {
     font-size: 1.2rem !important;
     width: 70px;
     margin: 0 auto;
+}
+
+
+
+// BO - REVIEWS ===========
+.product-line:hover {
+    background-color: #fff !important;
+}
+
+.validation-icon {
+    font-size: 1.2rem;
+}
+
+.toggle-btn {
+    font-size: 1.2rem !important;
+    background-color: transparent;
+    background-repeat:no-repeat;
+    overflow: hidden;
+    outline:none;
+    border: none;
+    padding: 5px 10px;
+}
+
+.toggle-btn:hover{
+    background-color: #F2F2F2 !important;
+}
+
+
+
+// FOOTER ===========
+footer {
+    width: 100%;
+    margin-top: 200px !important;
+    height: 80px;
+}
+
+.flag-img {
+    width: 30px !important;
+    height: auto !important;
+
+    img {
+        opacity: .7;
+    }
+}
+
+.copyright {
+    opacity: .7;
+}
+
+.social-icon {
+    font-size: 1.3rem;
+    opacity: .7;
 }
 
 
