filter by category and brand combined done

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,6 +172,9 @@ p {
     transform: scale(1.1);
 }
 
+// .filter-sidebar {
+//     width: 250px !important;
+// }
 
 // CART ================
 .cart-table {
