--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,12 @@
 }
 
 body {
+  position: relative;
   padding: 0;
   margin: 0;
   background-color: #F9F9F9;
+  padding-bottom: 10rem;
+  min-height: 91.7vh;
 }
 
 p {
@@ -346,8 +349,11 @@ input.form-control {
 
 footer {
   width: 100%;
-  margin-top: 200px !important;
+  position: absolute;
   height: 80px;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .flag-img {
