--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,18 @@
           box-sizing: border-box;
 }
 
+html  {
+  height: 100%;
+}
+
 body {
   position: relative;
   padding: 0;
   margin: 0;
   background-color: #F9F9F9;
-  padding-bottom: 10rem;
+  padding-bottom: 12rem;
   min-height: 91.7vh;
+  height: 100%;
 }
 
 p {
@@ -401,6 +406,69 @@ footer {
   }
   .page-container {
     padding-top: 90px;
+  }
+  .centering-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: block !important;
+  }
+  .filter-sidebar {
+    display: block !important;
+    width: 100% !important;
+    position: relative !important;
+    min-width: 325px !important;
+    top: 0;
+  }
+  .product-container {
+    display: block !important;
+  }
+  .cart-container {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cart-table, .total-group {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+  .quantity-col {
+    min-width: 190px;
+  }
+  footer  {
+    bottom: 0px !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cart-table, .total-group {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  footer {
+    height: 140px;
+  }
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .flags, .copyright {
+    margin-bottom: 10px;
   }
 }
 
